KUBERNETES/gateway-api/certmanager-examples/02-example/04-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myapp-route
  namespace: default
spec:
  parentRefs:
  - name: myapp-gateway-api
    sectionName: http
    kind: Gateway
  - name: myapp-gateway-api
    sectionName: https
    kind: Gateway
  hostnames:
  - myapp.mahinraza.online
  rules:
  - backendRefs:
    - name: python-svc
      port: 5000
      weight: 1
